--- a/athleet/pom.xml
+++ b/athleet/pom.xml
@@ -7,10 +7,6 @@
     <artifactId>hibernate-mongodb-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-<!--    <properties>-->
-<!--        <maven.compiler.source>21</maven.compiler.source>-->
-<!--        <maven.compiler.target>21</maven.compiler.target>-->
-<!--    </properties>-->
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
@@ -31,51 +27,7 @@
     </build>
 
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>org.hibernate</groupId>-->
-<!--            <artifactId>hibernate-core</artifactId>-->
-<!--            <version>6.4.4.Final</version>-->
-<!--        </dependency>-->
-
-<!--        &lt;!&ndash;Apache derby&ndash;&gt;-->
-<!--        &lt;!&ndash;<dependency>-->
-<!--            <groupId>org.apache.derby</groupId>-->
-<!--            <artifactId>derbyclient</artifactId>-->
-<!--            <version>10.17.1.0</version>-->
-<!--        </dependency>-->
-
-<!--        <dependency>-->
-<!--            <groupId>org.apache.derby</groupId>-->
-<!--            <artifactId>derbynet</artifactId>-->
-<!--            <version>10.17.1.0</version>-->
-<!--        </dependency>&ndash;&gt;-->
-
-<!--        <dependency>-->
-<!--            <groupId>org.hibernate.ogm</groupId>-->
-<!--            <artifactId>hibernate-ogm-core</artifactId>-->
-<!--&lt;!&ndash;            <version>5.4.1.Final</version>&ndash;&gt;-->
-<!--        </dependency>-->
-
-<!--        <dependency>-->
-<!--            <groupId>org.hibernate.ogm</groupId>-->
-<!--            <artifactId>hibernate-ogm-mongodb</artifactId>-->
-<!--&lt;!&ndash;            <version>5.4.1.Final</version>&ndash;&gt;-->
-<!--        </dependency>-->
-
-<!--        <dependency>-->
-<!--            <groupId>org.mongodb</groupId>-->
-<!--            <artifactId>mongodb-driver-sync</artifactId>-->
-<!--            <version>4.3.4</version>-->
-<!--        </dependency>-->
-
-<!--        <dependency>-->
-<!--            <groupId>javax.transaction</groupId>-->
-<!--            <artifactId>javax.transaction-api</artifactId>-->
-<!--            <version>1.3</version>-->
-<!--        </dependency>-->
-
-        <!-- Druga próba -->
-        <!--<dependency>
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>5.3.10.Final</version>
@@ -91,51 +43,42 @@
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver-sync</artifactId>
             <version>4.0.3</version>
-        </dependency>-->
+        </dependency>
 
-        <!-- Trzecia próba -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>5.3.10.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate.ogm</groupId>
-            <artifactId>hibernate-ogm-mongodb</artifactId>
-            <version>5.4.0.Final</version>
-        </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.hibernate.search</groupId>-->
-<!--            <artifactId>hibernate-search-orm</artifactId>-->
-<!--        </dependency>-->
-        <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongodb-driver-sync</artifactId>
-            <version>4.0.3</version>
-        </dependency>
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>javax.persistence-api</artifactId>
             <version>2.2</version>
         </dependency>
+
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
         </dependency>
+
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
             <version>2.3.1</version>
         </dependency>
+
         <dependency>
             <groupId>javax.activation</groupId>
             <artifactId>activation</artifactId>
             <version>1.1.1</version>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
